improved auth/token urls
